java/java-tests/testData/inspection/api_usage/use16api_on_15/LanguageLevel15.java

class Main {
  {
    <error descr="Usage of API documented as @since 16+">String.class.isRecord</error>();
    <error descr="Usage of API documented as @since 16+">Class.class.getRecordComponents</error>();
  }
}